--- a/cookjobs/website/index.html
+++ b/cookjobs/website/index.html
@@ -193,7 +193,7 @@
             }
           },
           isCurrentUrl: isCurrentUrl,
-          enableAMISDebug: true,
+          //enableAMISDebug: true,
           theme: 'cxd'
         }
       );
